--- a/public/style.less
+++ b/public/style.less
@@ -137,6 +137,10 @@ nav {
                 float: left;
                 margin-right: 2px;
             }
+            span.t {
+                color: #666;
+                margin-left: 18px;
+            }
         }
     }
 }
@@ -165,6 +169,7 @@ menu.message {
         max-width: 100%;
         margin: 10px 8px;
         height: 74px;
+        max-height: 74px;
         border: 1px solid transparent;
         box-shadow: inset 1px 1px 1px #666, inset 1px 1px 1px #fff;
         float: left;
