--- a/templates/index.html
+++ b/templates/index.html
@@ -56,6 +56,7 @@
     <menu class=message>
         <textarea name=message></textarea>
         <button name=send>Send</button>
+        <button name=upload>Upload...</button>
     </menu>
     <script src='/lib/jquery.js'></script>
     <script src='/client.js'></script>
